แก้ไขรูปไม่โชว์

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
                 <div class="groom-wrap col-12 col-lg-6">
                     <div class="groom">
-                        <img src="/image/pan.jpg" alt="groom" class="img-responsive">
+                        <img src="image/pan.jpg" alt="groom" class="img-responsive">
                     </div>
 
                     <div class="desc-bride">
