แก้ไข title และ เพิ่ม rsvp

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wedding of Whan & Pre</title>
+    <title>Wedding of Yok & Pan</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -64,7 +64,7 @@
             <!-- <div class="divider"></div> -->
             <div class="couple-names wow fadeInUp great-vibes-regular" data-wow-delay=".3s">YokPan</div>
             <div class="text wow fadeInDown" data-wow-delay=".3s">New chapter begins</div>
-            <div class="text line wow fadeInUp" data-wow-delay=".3s">Save The Date</div>
+            <div class="text line wow fadeInUp " data-wow-delay=".3s">Save The Date</div>
             <div class="text wow fadeInDown" data-wow-delay=".3s">OCTOBER 12, 2025</div>
             <p class="wow fadeIn" data-wow-delay=".3s">You are invited to our wedding ceremony and to the celebration of
                 our marriage. Don’t miss to meet us and we hope to see you on our special day.
@@ -93,7 +93,7 @@
                         <h4 class="wow fadeIn " data-wow-delay=".5s">Please join us in celebrating our love and
                             marriage, countdown in…</h4>
                     </div>
-                    <div class="countdown-container">
+                    <div class="countdown-container wow fadeIn " data-wow-delay=".5s">
                         <div class="countdown-box">
                             <div class="countdown-value wow pulse" data-wow-iteration="60" id="days">00</div>
                             <div class="countdown-label">Days</div>
@@ -126,9 +126,10 @@
         <div class="section-title">
             <h2 class="wow bounceInLeft" data-wow-delay=".3s">Theme Color</h2>
         </div>
-
-        <div class="theme-color wow bounceInRight" data-wow-delay=".3s">
-            <img src="./image/theme.png" alt="Couple photo" loading="lazy">
+        <div class="container">
+            <div class="theme-color wow bounceInRight" data-wow-delay=".3s">
+                <img src="./image/theme.png" alt="Couple photo" loading="lazy">
+            </div>
         </div>
 
     </section>
@@ -181,83 +182,98 @@
                     <h4 class="kanit-extralight">มีความยินดีขอเรียนเชิญท่านเพื่อเป็นเกียรติ เนื่องในพิธีมงคลสมรส</h4>
                 </div>
             </div>
-                <div class="row desc">
-                    <div class="col-lg-6">
-                        <div class="text-center">
-                            <h3 class="wow fadeIn kanit-extralight" data-wow-delay=".4s">นางสาว รัศมีบูหงา ศิวะบุณย์</h3>
-                            <h3 class="wow fadeIn" data-wow-delay=".4s">Ratsamebugha Siwaboon</h3>
-                            <br />
-                            <h4 class="date wow fadeInUp " data-wow-delay=".3s">&</h4>
-                            <br />
-                            <h3 class="wow fadeIn kanit-extralight" data-wow-delay=".4s">นาย พันธกานต์ ไพทยะทัตย์</h3>
-                            <h3 class="wow fadeIn" data-wow-delay=".4s">Pantakarn Phaitayatath</h3>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <img class="wow fadeIn " data-wow-delay=".4s" src="image/S__91422727_0.jpg" alt="">
+            <div class="row desc">
+                <div class="col-lg-6">
+                    <div class="text text-center">
+                        <h3 class="wow fadeIn kanit-extralight" data-wow-delay=".4s">นางสาว รัศมีบูหงา ศิวะบุณย์</h3>
+                        <h3 class="wow fadeIn" data-wow-delay=".4s">Ratsamebugha Siwaboon</h3>
+                        <br />
+                        <h4 class="date wow fadeInUp " data-wow-delay=".3s">&</h4>
+                        <br />
+                        <h3 class="wow fadeIn kanit-extralight" data-wow-delay=".4s">นาย พันธกานต์ ไพทยะทัตย์</h3>
+                        <h3 class="wow fadeIn" data-wow-delay=".4s">Pantakarn Phaitayatath</h3>
                     </div>
                 </div>
+                <div class="col-lg-6 text-center">
+                    <img class="wow fadeIn " data-wow-delay=".4s" src="image/S__91422727_0.jpg" alt="">
+                </div>
             </div>
+        </div>
         </div>
     </section>
 
     <section class="section event" id="event">
-        <div class="container">
+        <div class="container ">
             <div class="section-title  wow fadeIn" data-wow-delay=".3s">
                 <h2>Wedding Event</h2>
             </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <!-- Wedding Events Photo -->
+                    <div class="wedding_events_photo wow rollIn " data-wow-delay=".3s">
+                        <img src="image/nikah.jpg" alt="Nikah" loading="lazy">
+                    </div>
+                    <div class="wow fadeIn" data-wow-delay=".4s">
+                        <h2 class="wedding_events_title kanit-extralight" data-wow-iteration="60"
+                            data-wow-duration="3s">
+                            พิธีนิกะห์</h2>
+                    </div>
+                    <!-- Wedding Events Info -->
+                    <div class="wow fadeIn" data-wow-delay=".5s">
+                        <div class="wedding_events_info " data-wow-iteration="60" data-wow-duration="3s">
+                            <h3>15:00 PM - 16:00 PM</h3>
+                            <h3>Nikah Ceremony</h3>
+                        </div>
+                    </div>
+                </div>
 
-            <div class="eight columns row">
-                <!-- Wedding Events Photo -->
-                <div class="wedding_events_photo wow rollIn" data-wow-delay=".3s">
-                    <img src="image/nikah.jpg" alt="Nikah" loading="lazy">
-                </div>
-                <div class="wow fadeIn" data-wow-delay=".4s">
-                    <h2 class="wedding_events_title kanit-extralight" data-wow-iteration="60" data-wow-duration="3s">
-                        พิธีนิกะห์</h2>
-                </div>
-                <!-- Wedding Events Info -->
-                <div class="wow fadeIn" data-wow-delay=".5s">
-                    <div class="wedding_events_info " data-wow-iteration="60" data-wow-duration="3s">
-                        <h3>15:00 PM - 16:00 PM</h3>
-                        <h3>Nikah Ceremony</h3>
+                <div class="col-lg-6">
+                    <!-- Wedding events Photo -->
+                    <div class="wedding_events_photo wow rollIn" data-wow-delay=".3s">
+                        <img src="./image/wedding.jpg" alt="งานฉลอง" loading="lazy">
+                    </div>
+                    <div class="wow fadeIn" data-wow-delay=".4s">
+                        <h2 class="wedding_events_title kanit-extralight" data-wow-iteration="60"
+                            data-wow-duration="3s">
+                            ฉลองมงคลสมรส</h2>
+                    </div>
+                    <!-- Wedding Events Info -->
+                    <div class="wow fadeIn" data-wow-delay=".5s">
+                        <div class="wedding_events_info " data-wow-iteration="60" data-wow-duration="3s">
+                            <h3>18:00 PM - 22:00 PM</h3>
+                            <h3>Wedding Celebration</h3>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
 
-            <div class="eight columns row">
-                <!-- Wedding events Photo -->
-                <div class="wedding_events_photo wow rollIn" data-wow-delay=".3s">
-                    <img src="./image/wedding.jpg" alt="งานฉลอง" loading="lazy">
-                </div>
-                <div class="wow fadeIn" data-wow-delay=".4s">
-                    <h2 class="wedding_events_title kanit-extralight" data-wow-iteration="60" data-wow-duration="3s">
-                        ฉลองมงคลสมรส</h2>
-                </div>
-                <!-- Wedding Events Info -->
-                <div class="wow fadeIn" data-wow-delay=".5s">
-                    <div class="wedding_events_info " data-wow-iteration="60" data-wow-duration="3s">
-                        <h3>18:00 PM - 22:00 PM</h3>
-                        <h3>Wedding Celebration</h3>
-                    </div>
-                </div>
-            </div>
-
+    <!-- Location Section -->
+    <section class="section location" id="location">
+        <div class="section-title">
+            <h2>Wedding Location</h2>
+        </div>
+        <div class="container">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1153.2062849921!2d100.61038455506494!3d13.541227283439142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e2a7a90de9b68b%3A0xdebe9686911e7e4f!2z4Lin4Li04Lin4Liy4LmA4LiK4LmIIOC4muC4suC4h-C4m-C4uQ!5e0!3m2!1sth!2sth!4v1750152168974!5m2!1sth!2sth"
+                width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
 
 
-    <section class="hotel section" id="hotel">
+ <!--    <section class="hotel section" id="hotel">
         <div class="container">
             <div class="section-title  wow fadeIn" data-wow-delay=".3s">
                 <h2>Hotel</h2>
             </div>
 
-            <div class="hotel-grid">
+            <div class="hotel-grid"> -->
                 <!-- โรงแรมที่ 1 -->
 
 
-               <!--  <div class="org-card wow fadeInLeft">
+                <!--  <div class="org-card wow fadeInLeft">
                     <a class="no-underline" target="_blank" href="https://maps.app.goo.gl/c4dwXenECcyFjsok7">
                         <img src="./image/the_resort.jpg" alt="The Resort โพธาราม " class="org-logo" loading="lazy">
                         <h2 class="org-name kanit-extralight">เดอะ รีสอร์ต โฮเทล โพธาราม</h2>
@@ -270,7 +286,7 @@
 
                 <!-- โรงแรมที่ 2 -->
 
-               <!--  <div class="org-card wow fadeInRight">
+                <!--  <div class="org-card wow fadeInRight">
                     <a class="no-underline" target="_blank" href="https://maps.app.goo.gl/8BW2jCn2rHsMShGg7">
                         <img src="./image/Wicket_White_Villa.jpg" alt="Wicket White Villa" class="org-logo"
                             loading="lazy">
@@ -297,7 +313,7 @@
 
 
                 <!-- โรงแรมที่ 4 -->
-               <!--  <div class="org-card wow fadeInRight">
+                <!--  <div class="org-card wow fadeInRight">
                     <a class="no-underline" target="_blank" href="https://maps.app.goo.gl/fdUSWt87S8LGVSPV9">
                         <img src="./image/A_house_smaller_than_a_mountain.png" alt="บ้านเล็กกว่าเขา" class="org-logo"
                             loading="lazy">
@@ -311,9 +327,9 @@
 
 
 
-            </div>
+<!--             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- RSVP Section -->
@@ -328,33 +344,33 @@
             แบบตอบรับคำเชิญเข้าร่วมงานแต่งงาน
             <br />วันเสาร์ที่ 1 พ.ย. 2568 ไร่ภาพตะวัน ราชบุรี
         </p> -->
-        <div class="form-container">
-            <!-- <h3 class="ff-title">
-                      แบบตอบรับคำเชิญเข้าร่วมงานแต่งงาน <br/>วันเสาร์ที่ 1 พ.ย. 2568 ไร่ภาพตะวัน ราชบุรี
-                    </h3> -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 box text-center"> 
+                  <img class=" wow fadeIn " data-wow-delay=".4s" alt="">
+                   
+                </div>
+                <div class="col-lg-6">
+                    <iframe
+                    src="https://script.google.com/macros/s/AKfycbyFWnJQoX8nwXHGRhB6JfUTJU9Uxf_dUW3fGPNncre85NTDGtqK3m997jKAWRIqNKg/exec"
+                    width="100%" height="800px" frameborder="0" marginheight="50px" marginwidth="0" loading="lazy">กำลังโหลด…</iframe>
+                </div>
+            </div>
+           
 
     </section>
 
-    <!-- Location Section -->
-    <section class="section location" id="location">
-        <div class="section-title">
-            <h2 >Wedding Location</h2>
-        </div>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1153.2062849921!2d100.61038455506494!3d13.541227283439142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e2a7a90de9b68b%3A0xdebe9686911e7e4f!2z4Lin4Li04Lin4Liy4LmA4LiK4LmIIOC4muC4suC4h-C4m-C4uQ!5e0!3m2!1sth!2sth!4v1750152168974!5m2!1sth!2sth"
-            width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section>
+
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="footer-logo">Whan & Pre</div>
+        <div class="footer-logo">Yok & Pan</div>
         <ul class="social-links">
             <!-- <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
             <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
         </ul>
-        <p class="copyright">© 2025 Whan & Pre Wedding. All Rights Reserved.</p>
+        <p class="copyright">© 2025 Pre Website for Wedding. All Rights Reserved.</p>
 
         <script>
             // Mobile Menu Toggle
