--- a/index.html
+++ b/index.html
@@ -350,10 +350,10 @@
                   <img class=" wow fadeIn " data-wow-delay=".4s" alt="">
                    
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 rsvp-form">
                     <iframe
                     src="https://script.google.com/macros/s/AKfycbyFWnJQoX8nwXHGRhB6JfUTJU9Uxf_dUW3fGPNncre85NTDGtqK3m997jKAWRIqNKg/exec"
-                    width="100%" height="800px" frameborder="0" marginheight="50px" marginwidth="0" loading="lazy">กำลังโหลด…</iframe>
+                    width="100%" height="100%" frameborder="0" marginheight="50px" marginwidth="0" loading="lazy" style=" border-radius: 20px;">กำลังโหลด…</iframe>
                 </div>
             </div>
            
