--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
+    <!-- Lightbox2 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/lightbox2@2.11.5/dist/css/lightbox.min.css" rel="stylesheet">
+
+
     <!-- Css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -263,17 +267,17 @@
     </section>
 
 
- <!--    <section class="hotel section" id="hotel">
+    <!--    <section class="hotel section" id="hotel">
         <div class="container">
             <div class="section-title  wow fadeIn" data-wow-delay=".3s">
                 <h2>Hotel</h2>
             </div>
 
             <div class="hotel-grid"> -->
-                <!-- โรงแรมที่ 1 -->
+    <!-- โรงแรมที่ 1 -->
 
 
-                <!--  <div class="org-card wow fadeInLeft">
+    <!--  <div class="org-card wow fadeInLeft">
                     <a class="no-underline" target="_blank" href="https://maps.app.goo.gl/c4dwXenECcyFjsok7">
                         <img src="./image/the_resort.jpg" alt="The Resort โพธาราม " class="org-logo" loading="lazy">
                         <h2 class="org-name kanit-extralight">เดอะ รีสอร์ต โฮเทล โพธาราม</h2>
@@ -284,9 +288,9 @@
                     </p>
                 </div> -->
 
-                <!-- โรงแรมที่ 2 -->
+    <!-- โรงแรมที่ 2 -->
 
-                <!--  <div class="org-card wow fadeInRight">
+    <!--  <div class="org-card wow fadeInRight">
                     <a class="no-underline" target="_blank" href="https://maps.app.goo.gl/8BW2jCn2rHsMShGg7">
                         <img src="./image/Wicket_White_Villa.jpg" alt="Wicket White Villa" class="org-logo"
                             loading="lazy">
@@ -298,9 +302,9 @@
                     </p>
                 </div> -->
 
-                <!-- โรงแรมที่ 3 -->
+    <!-- โรงแรมที่ 3 -->
 
-                <!-- <div class="org-card wow fadeInLeft">
+    <!-- <div class="org-card wow fadeInLeft">
                     <a class="no-underline" target="_blank" href="https://maps.app.goo.gl/EN2FUufzm3TxjzwR6">
                         <img src="./image/gg.jpg" alt="G&G Ratchaburi" class="org-logo" loading="lazy">
                         <h3 class="org-name">G&G Ratchaburi</h3>
@@ -312,8 +316,8 @@
                 </div> -->
 
 
-                <!-- โรงแรมที่ 4 -->
-                <!--  <div class="org-card wow fadeInRight">
+    <!-- โรงแรมที่ 4 -->
+    <!--  <div class="org-card wow fadeInRight">
                     <a class="no-underline" target="_blank" href="https://maps.app.goo.gl/fdUSWt87S8LGVSPV9">
                         <img src="./image/A_house_smaller_than_a_mountain.png" alt="บ้านเล็กกว่าเขา" class="org-logo"
                             loading="lazy">
@@ -327,7 +331,7 @@
 
 
 
-<!--             </div>
+    <!--             </div>
         </div>
     </section> -->
 
@@ -346,19 +350,86 @@
         </p> -->
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 box text-center"> 
-                  <img class=" wow fadeIn " data-wow-delay=".4s" alt="">
-                   
+                <div class="col-lg-6 box text-center">
+                    <img class=" wow fadeIn " data-wow-delay=".4s" alt="">
+
                 </div>
                 <div class="col-lg-6 rsvp-form">
                     <iframe
-                    src="https://script.google.com/macros/s/AKfycbyFWnJQoX8nwXHGRhB6JfUTJU9Uxf_dUW3fGPNncre85NTDGtqK3m997jKAWRIqNKg/exec"
-                    width="100%" height="100%" frameborder="0" marginheight="50px" marginwidth="0" loading="lazy" style=" border-radius: 20px;">กำลังโหลด…</iframe>
+                        src="https://script.google.com/macros/s/AKfycbyFWnJQoX8nwXHGRhB6JfUTJU9Uxf_dUW3fGPNncre85NTDGtqK3m997jKAWRIqNKg/exec"
+                        width="100%" height="100%" frameborder="0" marginheight="50px" marginwidth="0" loading="lazy"
+                        style=" border-radius: 20px;">กำลังโหลด…</iframe>
                 </div>
             </div>
-           
+
 
     </section>
+
+    <!-- Gallery Section -->
+    <!-- <section class="section gallery" id="gallery">
+        <div class="section-title">
+          <h2 class="wow fadeIn" data-wow-delay=".3s">Gallery</h2>
+        </div>
+        <div class="gallery-grid wow fadeInUp" data-wow-delay=".4s">
+          <a href="gallery/gallery1.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+            <img src="gallery/gallery1.jpg" alt="Gallery 1" loading="lazy">
+          </a>
+          <a href="gallery/gallery2.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+            <img src="gallery/gallery2.jpg" alt="Gallery 2" loading="lazy">
+          </a>
+          <a href="gallery/gallery3.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+            <img src="gallery/gallery3.jpg" alt="Gallery 3" loading="lazy">
+          </a>
+          <a href="gallery/gallery4.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+            <img src="gallery/gallery4.jpg" alt="Gallery 4" loading="lazy">
+          </a>
+          <a href="gallery/gallery5.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+            <img src="gallery/gallery5.jpg" alt="Gallery 5" loading="lazy">
+          </a>
+          <a href="gallery/gallery6.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+            <img src="gallery/gallery6.jpg" alt="Gallery 6" loading="lazy">
+          </a>
+        </div>
+      </section> -->
+    <section class="section gallery" id="gallery">
+        <div class="section-title">
+            <h2>Gallery</h2>
+        </div>
+
+        <div class="gallery-grid">
+            <a href="gallery/gallery1.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+                <img src="gallery/gallery1.jpg" alt="Gallery 1" loading="lazy" />
+              </a>
+            <a href="gallery/gallery1.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+                <img src="gallery/gallery1.jpg" alt="Gallery 1" loading="lazy" />
+            </a>
+            <a href="gallery/gallery2.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+                <img src="gallery/gallery2.jpg" alt="Gallery 2" loading="lazy" />
+            </a>
+            <a href="gallery/gallery3.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+                <img src="gallery/gallery3.jpg" alt="Gallery 3" loading="lazy" />
+            </a>
+            <a href="gallery/gallery4.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+                <img src="gallery/gallery4.jpg" alt="Gallery 4" loading="lazy" />
+            </a>
+            <a href="gallery/gallery5.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+                <img src="gallery/gallery5.jpg" alt="Gallery 5" loading="lazy" />
+            </a>
+            <a href="gallery/gallery6.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+                <img src="gallery/gallery6.jpg" alt="Gallery 6" loading="lazy" />
+            </a>
+            <a href="gallery/gallery7.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+                <img src="gallery/gallery7.jpg" alt="Gallery 6" loading="lazy" />
+            </a>
+            <a href="gallery/gallery8.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+                <img src="gallery/gallery8.jpg" alt="Gallery 6" loading="lazy" />
+            </a>
+        </div>
+    </section>
+
+
+
+
 
 
 
@@ -371,102 +442,105 @@
             <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
         </ul>
         <p class="copyright">© 2025 Pre Website for Wedding. All Rights Reserved.</p>
+    </footer>
+    <script>
+        // Mobile Menu Toggle
+        const menuToggle = document.querySelector('.menu-toggle');
+        const navLinks = document.querySelector('.nav-links');
 
-        <script>
-            // Mobile Menu Toggle
-            const menuToggle = document.querySelector('.menu-toggle');
-            const navLinks = document.querySelector('.nav-links');
+        menuToggle.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+        });
 
-            menuToggle.addEventListener('click', () => {
-                navLinks.classList.toggle('active');
+        // Close menu when clicking a link
+        document.querySelectorAll('.nav-links a').forEach(link => {
+            link.addEventListener('click', () => {
+                navLinks.classList.remove('active');
             });
+        });
 
-            // Close menu when clicking a link
-            document.querySelectorAll('.nav-links a').forEach(link => {
-                link.addEventListener('click', () => {
-                    navLinks.classList.remove('active');
-                });
-            });
-
-            // Navbar scroll effect
-            window.addEventListener('scroll', () => {
-                const navbar = document.querySelector('.navbar');
-                if (window.scrollY > 50) {
-                    navbar.classList.add('scrolled');
-                } else {
-                    navbar.classList.remove('scrolled');
-                }
-            });
-
-            // Countdown Timer
-            function updateCountdown() {
-                const weddingDate = new Date('October 12, 2025 15:00:00').getTime();
-                const now = new Date().getTime();
-                const distance = weddingDate - now;
-
-                const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-                const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-                const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-                const seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-                document.getElementById('days').textContent = days.toString().padStart(2, '0');
-                document.getElementById('hours').textContent = hours.toString().padStart(2, '0');
-                document.getElementById('minutes').textContent = minutes.toString().padStart(2, '0');
-                document.getElementById('seconds').textContent = seconds.toString().padStart(2, '0');
-
-                if (distance < 0) {
-                    clearInterval(countdownTimer);
-                    document.querySelector('.countdown-container').innerHTML = '<h3 style="font-size: 2rem;">We\'re Married!</h3>';
-                }
+        // Navbar scroll effect
+        window.addEventListener('scroll', () => {
+            const navbar = document.querySelector('.navbar');
+            if (window.scrollY > 50) {
+                navbar.classList.add('scrolled');
+            } else {
+                navbar.classList.remove('scrolled');
             }
+        });
 
-            const countdownTimer = setInterval(updateCountdown, 1000);
-            updateCountdown();
+        // Countdown Timer
+        function updateCountdown() {
+            const weddingDate = new Date('October 12, 2025 15:00:00').getTime();
+            const now = new Date().getTime();
+            const distance = weddingDate - now;
 
-            // Smooth scrolling for anchor links
-            document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-                anchor.addEventListener('click', function (e) {
-                    e.preventDefault();
+            const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-                    const targetId = this.getAttribute('href');
-                    if (targetId === '#') return;
+            document.getElementById('days').textContent = days.toString().padStart(2, '0');
+            document.getElementById('hours').textContent = hours.toString().padStart(2, '0');
+            document.getElementById('minutes').textContent = minutes.toString().padStart(2, '0');
+            document.getElementById('seconds').textContent = seconds.toString().padStart(2, '0');
 
-                    const targetElement = document.querySelector(targetId);
-                    if (targetElement) {
-                        window.scrollTo({
-                            top: targetElement.offsetTop - 70,
-                            behavior: 'smooth'
-                        });
+            if (distance < 0) {
+                clearInterval(countdownTimer);
+                document.querySelector('.countdown-container').innerHTML = '<h3 style="font-size: 2rem;">We\'re Married!</h3>';
+            }
+        }
+
+        const countdownTimer = setInterval(updateCountdown, 1000);
+        updateCountdown();
+
+        // Smooth scrolling for anchor links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+
+                const targetId = this.getAttribute('href');
+                if (targetId === '#') return;
+
+                const targetElement = document.querySelector(targetId);
+                if (targetElement) {
+                    window.scrollTo({
+                        top: targetElement.offsetTop - 70,
+                        behavior: 'smooth'
+                    });
+                }
+            });
+        });
+    </script>
+
+    <script>
+        // เพิ่มเอฟเฟกต์เมื่อ scroll มาถึง
+        document.addEventListener('DOMContentLoaded', function () {
+            const items = document.querySelectorAll('.timeline-item');
+
+            const observer = new IntersectionObserver(entries => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('visible');
+                        observer.unobserve(entry.target); // ถ้าต้องการให้แสดงครั้งเดียว
                     }
                 });
-            });
-        </script>
-        <script>
-            // เพิ่มเอฟเฟกต์เมื่อ scroll มาถึง
-            document.addEventListener('DOMContentLoaded', function () {
-                const items = document.querySelectorAll('.timeline-item');
+            }, { threshold: 0.1 });
 
-                const observer = new IntersectionObserver(entries => {
-                    entries.forEach(entry => {
-                        if (entry.isIntersecting) {
-                            entry.target.classList.add('visible');
-                            observer.unobserve(entry.target); // ถ้าต้องการให้แสดงครั้งเดียว
-                        }
-                    });
-                }, { threshold: 0.1 });
+            items.forEach(item => observer.observe(item));
+        });
+    </script>
+     <script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.5/dist/js/lightbox.min.js"></script>
+    <script src="js/falling.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
+    <script>
+        new WOW().init();
+    </script>
 
-                items.forEach(item => observer.observe(item));
-            });
-        </script>
-        <script src="js/falling.js"></script>
-        <script src="js/wow.min.js"></script>
-        <script src="js/rsvp.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-            crossorigin="anonymous"></script>
-        <script>
-            new WOW().init();
-        </script>
+
 </body>
 
 </html>
