--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 
 
     <!-- Css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -528,7 +527,8 @@
             items.forEach(item => observer.observe(item));
         });
     </script>
-     <script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.5/dist/js/lightbox.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.5/dist/js/lightbox-plus-jquery.min.js"></script>
+
     <script src="js/falling.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
