ใส่ animate ใน รูป

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
 
             <div class="row couple-wrap">
-                <div class="bride-wrap col-12 col-lg-6 clearfix">
+                <div class="bride-wrap col-12 col-lg-6 clearfix  wow fadeInLeft" data-wow-delay=".3s">
                     <div class="bride">
                         <img src="image/yok.jpg" alt="bride" class="img-responsive">
                     </div>
@@ -165,7 +165,7 @@
                     <i class="bi bi-heart-fill"></i>
                 </p>
 
-                <div class="groom-wrap col-12 col-lg-6">
+                <div class="groom-wrap col-12 col-lg-6 wow fadeInRight" data-wow-delay=".3s">
                     <div class="groom">
                         <img src="image/pan.jpg" alt="groom" class="img-responsive">
                     </div>
@@ -348,9 +348,9 @@
             <br />วันเสาร์ที่ 1 พ.ย. 2568 ไร่ภาพตะวัน ราชบุรี
         </p> -->
         <div class="container">
-            <div class="row">
+            <div class="row wow fadeIn" data-wow-delay=".3s">
                 <div class="col-lg-6 box text-center">
-                    <img class=" wow fadeIn " data-wow-delay=".4s" alt="">
+                    
 
                 </div>
                 <div class="col-lg-6 rsvp-form">
@@ -390,39 +390,34 @@
           </a>
         </div>
       </section> -->
-    <section class="section gallery" id="gallery">
-        <div class="section-title">
-            <h2>Gallery</h2>
-        </div>
-
+      <section class="section gallery" id="gallery">
         <div class="gallery-grid">
-
-            <a href="gallery/gallery1.jpg" data-lightbox="wedding-gallery" class="gallery-item">
-                <img src="gallery/gallery1.jpg" alt="Gallery 1" loading="lazy" />
-            </a>
-            <a href="gallery/gallery2.jpg" data-lightbox="wedding-gallery" class="gallery-item">
-                <img src="gallery/gallery2.jpg" alt="Gallery 2" loading="lazy" />
-            </a>
-            <a href="gallery/gallery3.jpg" data-lightbox="wedding-gallery" class="gallery-item">
-                <img src="gallery/gallery3.jpg" alt="Gallery 3" loading="lazy" />
-            </a>
-            <a href="gallery/gallery4.jpg" data-lightbox="wedding-gallery" class="gallery-item">
-                <img src="gallery/gallery4.jpg" alt="Gallery 4" loading="lazy" />
-            </a>
-            <a href="gallery/gallery5.jpg" data-lightbox="wedding-gallery" class="gallery-item">
-                <img src="gallery/gallery5.jpg" alt="Gallery 5" loading="lazy" />
-            </a>
-            <a href="gallery/gallery6.jpg" data-lightbox="wedding-gallery" class="gallery-item">
-                <img src="gallery/gallery6.jpg" alt="Gallery 6" loading="lazy" />
-            </a>
-            <a href="gallery/gallery7.jpg" data-lightbox="wedding-gallery" class="gallery-item">
-                <img src="gallery/gallery7.jpg" alt="Gallery 6" loading="lazy" />
-            </a>
-            <a href="gallery/gallery8.jpg" data-lightbox="wedding-gallery" class="gallery-item">
-                <img src="gallery/gallery8.jpg" alt="Gallery 6" loading="lazy" />
-            </a>
+          <a href="gallery/gallery1.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp" data-wow-delay="0s">
+            <img src="gallery/gallery1.jpg" alt="Gallery 1" loading="lazy" />
+          </a>
+          <a href="gallery/gallery2.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp" data-wow-delay="0.1s">
+            <img src="gallery/gallery2.jpg" alt="Gallery 2" loading="lazy" />
+          </a>
+          <a href="gallery/gallery3.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp" data-wow-delay="0.2s">
+            <img src="gallery/gallery3.jpg" alt="Gallery 3" loading="lazy" />
+          </a>
+          <a href="gallery/gallery4.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp" data-wow-delay="0.3s">
+            <img src="gallery/gallery4.jpg" alt="Gallery 4" loading="lazy" />
+          </a>
+          <a href="gallery/gallery5.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp" data-wow-delay="0.4s">
+            <img src="gallery/gallery5.jpg" alt="Gallery 5" loading="lazy" />
+          </a>
+          <a href="gallery/gallery6.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp" data-wow-delay="0.5s">
+            <img src="gallery/gallery6.jpg" alt="Gallery 6" loading="lazy" />
+          </a>
+          <a href="gallery/gallery7.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp" data-wow-delay="0.6s">
+            <img src="gallery/gallery7.jpg" alt="Gallery 7" loading="lazy" />
+          </a>
+          <a href="gallery/gallery8.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp" data-wow-delay="0.7s">
+            <img src="gallery/gallery8.jpg" alt="Gallery 8" loading="lazy" />
+          </a>
         </div>
-    </section>
+      </section>
 
 
 
