--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <!-- couple Section -->
     <section id="couple" class="section couple">
-        <div class="container">
+        <div class="container text-center">
             <div class="row">
                 <div class="col-12 text-center heading">
                     <h2>ON BEHALF OF</h2>
@@ -165,26 +165,28 @@
                     </div>
                 </div>
 
-               <!--  <p class="heart text-center wow pulse" data-wow-iteration="60">
-                    <i class="bi bi-heart-fill"></i>
-                </p> -->
+                <h4 class="heart text-center wow pulse" data-wow-iteration="60">
+                    AND
+                </h4>
 
                 <div class="groom-wrap col-12 col-lg-6 wow fadeInRight" data-wow-delay=".3s">
                     <div class="desc-bride">
                         <h3>Groom’s Parent</h3>
 
                         <p>
-                            วิไลวรรณ & มนตรี
+                            วิไลวรรณ - มนตรี
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="row p-3">
-                <div class="col-12 text-center ">
-                    <h3>WE ARE PLEASED TO INVITE YOU TO THE WEDDING OF</h3>
-                    <h4 class="kanit-extralight">มีความยินดีขอเรียนเชิญท่านเพื่อเป็นเกียรติ เนื่องในพิธีมงคลสมรส</h4>
-                </div>
+        </div>
+        <div class="row text-please ">
+            <div class="col-12 text-center color-white">
+                <P>WE ARE PLEASED TO INVITE YOU TO THE WEDDING OF</P>
+                <p class="kanit-extralight">มีความยินดีขอเรียนเชิญท่านเพื่อเป็นเกียรติ เนื่องในพิธีมงคลสมรส</p>
             </div>
+        </div>
+        <div class="container">
             <div class="row desc">
                 <div class="col-lg-6">
                     <div class="text text-center">
@@ -198,7 +200,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 text-center">
-                    <img class="wow fadeIn " data-wow-delay=".4s" src="image/S__91422727_0.jpg" alt="">
+                    <img class="wow fadeIn" data-wow-delay=".4s" src="image/middle-background.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -212,40 +214,56 @@
                 <h2>Wedding Event</h2>
             </div>
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-4">
                     <!-- Wedding Events Photo -->
                     <div class="wedding_events_photo wow rollIn " data-wow-delay=".3s">
-                        <img src="image/nikah.jpg" alt="Nikah" loading="lazy">
+                        <img src="image/procession.jpg" alt="Nikah" loading="lazy">
                     </div>
                     <div class="wow fadeIn" data-wow-delay=".4s">
-                        <h2 class="wedding_events_title kanit-extralight" data-wow-iteration="60"
-                            data-wow-duration="3s">
-                            พิธีนิกะห์</h2>
+                        <h2 class="wedding_events_title " data-wow-iteration="60" data-wow-duration="3s">
+                            Procession of the bride price</h2>
                     </div>
                     <!-- Wedding Events Info -->
                     <div class="wow fadeIn" data-wow-delay=".5s">
                         <div class="wedding_events_info " data-wow-iteration="60" data-wow-duration="3s">
                             <h3>15:00 PM - 16:00 PM</h3>
-                            <h3>Nikah Ceremony</h3>
+                            <h3 class="kanit-extralight">พิธีเเห่ขันหมาก</h3>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-6">
+                <div class="col-lg-4">
+                    <!-- Wedding Events Photo -->
+                    <div class="wedding_events_photo wow rollIn " data-wow-delay=".3s">
+                        <img src="image/nikah.jpg" alt="Nikah" loading="lazy">
+                    </div>
+                    <div class="wow fadeIn" data-wow-delay=".4s">
+                        <h2 class="wedding_events_title " data-wow-iteration="60" data-wow-duration="3s">
+                            Nikah Ceremony</h2>
+                    </div>
+                    <!-- Wedding Events Info -->
+                    <div class="wow fadeIn" data-wow-delay=".5s">
+                        <div class="wedding_events_info " data-wow-iteration="60" data-wow-duration="3s">
+                            <h3>16:00 PM - 16:30 PM</h3>
+                            <h3 class="kanit-extralight">พิธีนิกะห์</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
                     <!-- Wedding events Photo -->
                     <div class="wedding_events_photo wow rollIn" data-wow-delay=".3s">
                         <img src="./image/wedding.jpg" alt="งานฉลอง" loading="lazy">
                     </div>
                     <div class="wow fadeIn" data-wow-delay=".4s">
-                        <h2 class="wedding_events_title kanit-extralight" data-wow-iteration="60"
-                            data-wow-duration="3s">
-                            ฉลองมงคลสมรส</h2>
+                        <h3 class="wedding_events_title " data-wow-iteration="60" data-wow-duration="3s">
+                            Wedding Celebration
+                        </h3>
                     </div>
                     <!-- Wedding Events Info -->
                     <div class="wow fadeIn" data-wow-delay=".5s">
                         <div class="wedding_events_info " data-wow-iteration="60" data-wow-duration="3s">
                             <h3>18:00 PM - 22:00 PM</h3>
-                            <h3>Wedding Celebration</h3>
+                            <h3 class="kanit-extralight">ฉลองมงคลสมรส</h3>
                         </div>
                     </div>
                 </div>
@@ -258,35 +276,71 @@
         <div class="section-title">
             <h2>Wedding Location</h2>
         </div>
-        <div class="container">
-            <iframe
+       <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <img src="image/location1.png">
+            </div>
+        </div>
+        <div class="row">
+            <div class="owl-carousel owl-theme gallery-carousel">
+                <a href="image/location2.png" data-lightbox="location-gallery" class="gallery-item ">
+                        <img src="image/location2.png" alt="Gallery 1" loading="lazy" />
+                    </div>
+                </a>
+                <a href="image/location3.png" data-lightbox="location-gallery" class="gallery-item">
+                    <div class="image-container wow fadeInUp" data-wow-delay="0.1s">
+                        <img src="image/location3.png" alt="Gallery 2" loading="lazy" />
+                        <div class="hover-icon"><i class="fa fa-search-plus"></i></div>
+                    </div>
+                </a>
+                <a href="image/location4.png" data-lightbox="location-gallery" class="gallery-item ">
+                    <div class="image-container wow fadeInUp" data-wow-delay="0.2s">
+                        <img src="image/location4.png" alt="Gallery 3" loading="lazy" />
+                        <div class="hover-icon"><i class="fa fa-search-plus"></i></div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4">
+                <img src="image/location2.png">
+            </div>
+            <div class="col-lg-4">
+                <img src="image/location3.png">
+            </div>
+            <div class="col-lg-4">
+                <img src="image/location4.png">
+            </div>
+        </div>
+            <!-- <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1153.2062849921!2d100.61038455506494!3d13.541227283439142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e2a7a90de9b68b%3A0xdebe9686911e7e4f!2z4Lin4Li04Lin4Liy4LmA4LiK4LmIIOC4muC4suC4h-C4m-C4uQ!5e0!3m2!1sth!2sth!4v1750152168974!5m2!1sth!2sth"
                 width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                referrerpolicy="no-referrer-when-downgrade"></iframe> -->
         </div>
     </section>
 
 
-    <!--    <section class="hotel section" id="hotel">
+ <section class="hotel section" id="hotel">
         <div class="container">
             <div class="section-title  wow fadeIn" data-wow-delay=".3s">
                 <h2>Hotel</h2>
             </div>
 
-            <div class="hotel-grid"> -->
+            <div class="hotel-grid">
     <!-- โรงแรมที่ 1 -->
 
 
-    <!--  <div class="org-card wow fadeInLeft">
-                    <a class="no-underline" target="_blank" href="https://maps.app.goo.gl/c4dwXenECcyFjsok7">
-                        <img src="./image/the_resort.jpg" alt="The Resort โพธาราม " class="org-logo" loading="lazy">
-                        <h2 class="org-name kanit-extralight">เดอะ รีสอร์ต โฮเทล โพธาราม</h2>
-                        <p class="org-role">เวลาเดินทาง 20 นาที</p>
-                        <p class="org-role">ราคาห้องละ 740 บาท <br />มีเตียงเสริม มีอาหารเช้า</p>
+   <div class="org-card wow fadeInLeft">
+                    <a class="no-underline" target="_blank" href="https://maps.app.goo.gl/D7DcF4CYwCTSXcac8">
+                        <img src="./image/hotel.jpg" alt="ริมขอบฟ้าเออร์เบินรีสอร์ท " class="org-logo" loading="lazy">
+                        <h2 class="org-name kanit-extralight">ริมขอบฟ้าเออร์เบินรีสอร์ท</h2>
+                        <p class="org-role">เวลาเดินทาง 10 นาที</p>
+                        <p class="org-role">ราคาห้องละ 1,300 บาท</p>
                     </a>
-                    <p class="org-role">โทร. <a class="no-underline org-role" href="tel:+66973738811">097 373 8811</a>
+                    <p class="org-role">โทร. <a class="no-underline org-role" href="tel:+6620268815">02 026 8815</a>
                     </p>
-                </div> -->
+                </div> 
 
     <!-- โรงแรมที่ 2 -->
 
@@ -331,30 +385,32 @@
 
 
 
-    <!--             </div>
+            </div>
         </div>
-    </section> -->
+    </section>
 
 
     <!-- RSVP Section -->
-    <section class="section rsvp" id="rsvp">
+    <section class=" rsvp" id="rsvp">
         <div class="section-title  wow fadeIn" data-wow-delay=".3s">
             <h2>RSVP</h2>
         </div>
         <p class="wow fadeIn" data-wow-delay=".3s">
             We can't wait to celebrate with you! Please let us know if you'll be able to attend by filling out the form
             below.</p>
+        <p class="wow fadeIn kanit-extralight" data-wow-delay=".3s">
+            เพื่อให้เราได้จัดเตรียมการล่วงหน้าได้อย่างเหมาะสม
+            ขอรบกวนทุกท่านทำแบบตอบรับเข้าร่วมงานให้เราด้วยนะคะ
+        </p>
 
         <div class="container">
             <div class="row wow fadeIn" data-wow-delay=".3s">
                 <div class="col-lg-6 box text-center">
-                    <img src="gallery/gallery2.jpg">
-                    <h5 class="wow fadeIn kanit-extralight" data-wow-delay=".3s">
-                        เพื่อให้เราได้จัดเตรียมการล่วงหน้าได้อย่างเหมาะสม
-                        ขอรบกวนทุกท่านทำแบบตอบรับเข้าร่วมงานให้เราด้วยนะคะ
-                        </h5>
+                    <img src="image/rsvp.jpg">
+
                 </div>
                 <div class="col-lg-6 rsvp-form">
+
                     <h5 class="padding kanit-extralight">แบบตอบรับการเข้าร่วมงาน</h5>
                     <iframe
                         src="https://script.google.com/macros/s/AKfycbyFWnJQoX8nwXHGRhB6JfUTJU9Uxf_dUW3fGPNncre85NTDGtqK3m997jKAWRIqNKg/exec"
@@ -367,7 +423,7 @@
     </section>
 
 
-    <section class="gallery" id="gallery">
+    <section class="section gallery" id="gallery">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -379,50 +435,50 @@
             </div>
             <div class="row">
                 <div class="owl-carousel owl-theme gallery-carousel">
-                    <a href="gallery/gallery1.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp">
-                        <div class="image-container">
+                    <a href="gallery/gallery1.jpg" data-lightbox="wedding-gallery" class="gallery-item ">
+                        <div class="image-container wow fadeInUp" data-wow-delay="0s">
                             <img src="gallery/gallery1.jpg" alt="Gallery 1" loading="lazy" />
                             <div class="hover-icon"><i class="fa fa-search-plus"></i></div>
                         </div>
                     </a>
-                    <a href="gallery/gallery2.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp">
-                        <div class="image-container">
+                    <a href="gallery/gallery2.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+                        <div class="image-container wow fadeInUp" data-wow-delay="0.1s">
                             <img src="gallery/gallery2.jpg" alt="Gallery 2" loading="lazy" />
                             <div class="hover-icon"><i class="fa fa-search-plus"></i></div>
                         </div>
                     </a>
-                    <a href="gallery/gallery3.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp">
-                        <div class="image-container">
+                    <a href="gallery/gallery3.jpg" data-lightbox="wedding-gallery" class="gallery-item ">
+                        <div class="image-container wow fadeInUp" data-wow-delay="0.2s">
                             <img src="gallery/gallery3.jpg" alt="Gallery 3" loading="lazy" />
                             <div class="hover-icon"><i class="fa fa-search-plus"></i></div>
                         </div>
                     </a>
-                    <a href="gallery/gallery4.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp">
-                        <div class="image-container">
+                    <a href="gallery/gallery4.jpg" data-lightbox="wedding-gallery" class="gallery-item ">
+                        <div class="image-container wow fadeInUp" data-wow-delay="0.3s">
                             <img src="gallery/gallery4.jpg" alt="Gallery 4" loading="lazy" />
                             <div class="hover-icon"><i class="fa fa-search-plus"></i></div>
                         </div>
                     </a>
-                    <a href="gallery/gallery5.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp">
-                        <div class="image-container">
+                    <a href="gallery/gallery5.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+                        <div class="image-container wow fadeInUp" data-wow-delay="0.4s">
                             <img src="gallery/gallery5.jpg" alt="Gallery 5" loading="lazy" />
                             <div class="hover-icon"><i class="fa fa-search-plus"></i></div>
                         </div>
                     </a>
-                    <a href="gallery/gallery6.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp">
-                        <div class="image-container">
+                    <a href="gallery/gallery6.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+                        <div class="image-container wow fadeInUp" data-wow-delay="0.5s">
                             <img src="gallery/gallery6.jpg" alt="Gallery 6" loading="lazy" />
                             <div class="hover-icon"><i class="fa fa-search-plus"></i></div>
                         </div>
                     </a>
-                    <a href="gallery/gallery7.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp">
-                        <div class="image-container">
+                    <a href="gallery/gallery7.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+                        <div class="image-container wow fadeInUp" data-wow-delay="0.6s">
                             <img src="gallery/gallery7.jpg" alt="Gallery 7" loading="lazy" />
                             <div class="hover-icon"><i class="fa fa-search-plus"></i></div>
                         </div>
                     </a>
-                    <a href="gallery/gallery8.jpg" data-lightbox="wedding-gallery" class="gallery-item wow fadeInUp">
-                        <div class="image-container">
+                    <a href="gallery/gallery8.jpg" data-lightbox="wedding-gallery" class="gallery-item">
+                        <div class="image-container wow fadeInUp" data-wow-delay="0.7s">
                             <img src="gallery/gallery8.jpg" alt="Gallery 8" loading="lazy" />
                             <div class="hover-icon"><i class="fa fa-search-plus"></i></div>
                         </div>
@@ -549,7 +605,7 @@
         new WOW().init();
     </script>
     <script>
-        $(document).ready(function () {
+        /* $(document).ready(function () {
             $('.owl-carousel').owlCarousel({
                 loop: true,
                 margin: 10,
@@ -563,6 +619,19 @@
                     1000: { items: 3 }
                 }
             });
+        }); */
+        $(".gallery-carousel").owlCarousel({
+            loop: false, // ปิดการทำ loop ที่จะ clone รูป
+            margin: 10,
+  
+            dots: true,
+
+            responsive: {
+                0: { items: 1 },
+                576: { items: 2 },
+                768: { items: 3 },
+                992: { items: 3 }
+            }
         });
     </script>
 
