--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wedding of Yok & Pan</title>
+    <title>Wedding of Yoke & Pan</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -48,7 +48,7 @@
 
     <!-- Navigation -->
     <nav class="navbar">
-        <a href="#" class="great-vibes-regular logo">Yok & Pan</a>
+        <a href="#" class="great-vibes-regular logo">Yoke & Pan</a>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#event">Events</a></li>
@@ -73,7 +73,7 @@
 
             <!-- <h1 class="wow fadeInUp" data-wow-delay=".2s">We're Getting Married</h1> -->
             <!-- <div class="divider"></div> -->
-            <div class="couple-names wow fadeInUp great-vibes-regular" data-wow-delay=".3s">YokPan</div>
+            <div class="couple-names wow fadeInUp great-vibes-regular" data-wow-delay=".3s">YokePan</div>
             <div class="text wow fadeInDown" data-wow-delay=".3s">New chapter begins</div>
             <div class="text line wow fadeInUp  " data-wow-delay=".3s">Save The Date</div>
             <div class="text wow fadeInDown" data-wow-delay=".3s">OCTOBER 12, 2025</div>
@@ -551,7 +551,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="footer-logo">Yok & Pan</div>
+        <div class="footer-logo">Yoke & Pan</div>
         <ul class="social-links">
             <!-- <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
