--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     </div>
                     <!-- Wedding Events Info -->
                     <div class="wow fadeIn" data-wow-delay=".5s">
-                        <div class="wow wedding_events_info fadeInUpBig" data-wow-delay=".5s" data-wow-duration="3s">
+                        <div class="wow wedding_events_info fadeInDown" data-wow-delay=".5s" data-wow-duration="3s">
                             <h3>
                                 15:00 PM - 16:00 PM
                             </h3>
@@ -310,13 +310,13 @@
                         <img alt="Nikah" loading="lazy" src="image/nikah.jpg" />
                     </div>
                     <div class="wow fadeIn" data-wow-delay=".4s">
-                        <h2 class="wow wedding_events_title bounceInDown" data-wow-delay=".5s" data-wow-duration="3s">
+                        <h2 class="wow wedding_events_title bounceInDown" data-wow-delay=".4s" data-wow-duration="3s">
                             Nikah Ceremony
                         </h2>
                     </div>
                     <!-- Wedding Events Info -->
                     <div class="wow fadeIn" data-wow-delay=".5s">
-                        <div class="wow wedding_events_info fadeInUpBig" data-wow-delay=".6s" data-wow-duration="3s">
+                        <div class="wow wedding_events_info fadeInDown" data-wow-delay=".5s" data-wow-duration="3s">
                             <h3>
                                 16:00 PM - 16:30 PM
                             </h3>
@@ -332,13 +332,13 @@
                         <img alt="งานฉลอง" loading="lazy" src="./image/wedding.jpg" />
                     </div>
                     <div class="wow fadeIn" data-wow-delay=".4s">
-                        <h3 class="wow wedding_events_title bounceInDown" data-wow-delay=".6s" data-wow-duration="3s">
+                        <h3 class="wow wedding_events_title bounceInDown" data-wow-delay=".4s" data-wow-duration="3s">
                             Wedding Celebration
                         </h3>
                     </div>
                     <!-- Wedding Events Info -->
-                    <div class="wow fadeIn" data-wow-delay=".5s">
-                        <div class="wow wedding_events_info fadeInUpBig" data-wow-delay=".7s" data-wow-duration="3s">
+                    <div class="wow fadeIn" data-wow-delay=".4s">
+                        <div class="wow wedding_events_info fadeInDown" data-wow-delay=".5s" data-wow-duration="3s">
                             <h3>
                                 18:00 PM - 22:00 PM
                             </h3>
@@ -789,7 +789,7 @@
             });
         }); */
         $(".gallery-loop").owlCarousel({
-            loop: false, // ปิดการทำ loop ที่จะ clone รูป
+            loop: true, // ปิดการทำ loop ที่จะ clone รูป
             margin: 10,
             autoplay: true,
             dots: true,
@@ -802,7 +802,7 @@
             }
         });
         $(".special-loop").owlCarousel({
-            loop: false, // ปิดการทำ loop ที่จะ clone รูป
+            loop: true, // ปิดการทำ loop ที่จะ clone รูป
             margin: 10,
             autoplay: true,
             dots: true,
