--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                 <div class="col-lg-12">
                     <div class="section-title">
                         <h2>
-                            Special1 Gallery
+                            Special Gallery
                         </h2>
                     </div>
                 </div>
