--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 </div>
             </div>
             <div class="row couple-wrap">
-                <div class="col-12 col-lg-6 clearfix wow fadeInLeft" data-wow-delay=".3s">
+                <div class="col-12 col-lg-5 clearfix wow fadeInLeft" data-wow-delay=".3s">
                     <div class="wow desc-groom slideInLeft" data-wow-delay=".4s">
                         <h3>
                             Bride&rsquo;s Parent
@@ -219,10 +219,12 @@
                         </p>
                     </div>
                 </div>
-                <h4 class="wow heart text-center  tada" data-wow-delay=".5s" data-wow-iteration="60">
-                    AND
-                </h4>
-                <div class="groom-wrap col-12 col-lg-6 wow fadeInRight" data-wow-delay=".3s">
+                <div class="col-12 col-lg-2 clearfix  wow fadeInUp" data-wow-delay=".3s">
+                    <h4 class="heart wow pulse" data-wow-iteration="60">
+                        AND
+                    </h4>
+                </div>
+                <div class="groom-wrap col-12 col-lg-5 wow fadeInRight" data-wow-delay=".3s">
                     <div class="desc-bride wow slideInRight" data-wow-delay=".4s">
                         <h3>
                             Groom&rsquo;s Parent
@@ -235,7 +237,7 @@
             </div>
         </div>
         <div class="row text-please">
-            <div class="col-12 text-center color-white">
+            <div class="col-12 text-center color-white wow fadeIn" data-wow-delay=".3s">
                 <p>
                     WE ARE PLEASED TO INVITE YOU TO THE WEDDING OF
                 </p>
@@ -248,10 +250,10 @@
             <div class="row desc">
                 <div class="col-lg-6">
                     <div class="text text-center">
-                        <h3 class="wow fadeIn kanit-extralight fadeInLeftBig" data-wow-delay=".4s">
+                        <h3 class="thai wow fadeIn kanit-extralight fadeInLeftBig" data-wow-delay=".4s">
                             นางสาว รัศมีบูหงา ศิวะบุณย์
                         </h3>
-                        <h3 class="wow fadeIn" data-wow-delay=".4s">
+                        <h3 class="eng wow fadeIn" data-wow-delay=".4s">
                             Ratsamebugha Siwaboon
                         </h3>
                         <br />
@@ -259,10 +261,10 @@
                             &amp;
                         </h4>
                         <br />
-                        <h3 class="wow fadeIn kanit-extralight fadeInRightBig" data-wow-delay=".4s">
+                        <h3 class="thai wow fadeIn kanit-extralight fadeInRightBig" data-wow-delay=".4s">
                             นาย พันธกานต์ ไพทยะทัตย์
                         </h3>
-                        <h3 class="wow fadeIn" data-wow-delay=".4s">
+                        <h3 class="eng wow fadeIn" data-wow-delay=".4s">
                             Pantakarn Phaitayatath
                         </h3>
                     </div>
@@ -764,7 +766,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Owl Carousel JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <script src="js/falling.js"></script>
+<!--     <script src="js/falling.js"></script> -->
     <script src="js/wow.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
