--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             </div>
         </div>
     </section>
-    <section class="hotel section" id="hotel">
+    <section class="section hotel" id="hotel">
         <div class="container">
             <div class="section-title wow fadeIn" data-wow-delay=".3s">
                 <h2 class="wow fadeInDownBig" data-wow-delay=".3s">
