--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/skeleton.css">
+  <!--   <link rel="stylesheet" href="css/skeleton.css"> -->
 
 
 
@@ -70,7 +70,11 @@
                     Location
                 </a>
             </li>
-            <!-- <li><a href="#hotel">hotel</a></li> -->
+            <li>
+                <a href="#hotel">
+                    hotel
+                </a>
+            </li>
             <li>
                 <a href="#rsvp">
                     RSVP
@@ -185,7 +189,7 @@
         </div>
     </section>
     <!-- theme Section -->
-    <section class="section" id="theme">
+    <section class="section theme" id="theme">
         <div class="section-title">
             <h2 class="wow bounceInLeft lightSpeedInLeft" data-wow-delay=".3s">
                 Theme Color
@@ -239,17 +243,18 @@
                 </div>
             </div>
         </div>
-        <div class="row text-please">
-            <div class="col-12 text-center color-white wow fadeIn" data-wow-delay=".3s">
-                <p>
-                    WE ARE PLEASED TO INVITE YOU TO THE WEDDING OF
-                </p>
-                <p class="kanit-extralight">
-                    มีความยินดีขอเรียนเชิญท่านเพื่อเป็นเกียรติ เนื่องในพิธีมงคลสมรส
-                </p>
+
+            <div class="row text-please">
+                <div class="col-12 text-center color-white wow fadeIn" data-wow-delay=".3s">
+                    <p>
+                        WE ARE PLEASED TO INVITE YOU TO THE WEDDING OF
+                    </p>
+                    <p class="kanit-extralight">
+                        มีความยินดีขอเรียนเชิญท่านเพื่อเป็นเกียรติ เนื่องในพิธีมงคลสมรส
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="container">
+            <div class="container">
             <div class="row desc">
                 <div class="col-lg-6">
                     <div class="text text-center">
@@ -370,8 +375,8 @@
                     <img class="wow zoomIn" data-wow-delay=".4s" loading="lazy" src="image/location1.png" />
                 </div>
             </div>
-            <div class="row">
-                <div class="owl-carousel owl-theme location-carousel">
+            <div class="row ">
+                <div class="col-lg-12 owl-carousel owl-theme location-carousel">
                     <div class="image-container wow fadeInUp" data-wow-delay="0.1s">
                         <img alt="Gallery 1" loading="lazy" src="image/location2.png" />
 
@@ -388,7 +393,7 @@
                 <div class="col-lg-12">
                     <a class="map-image-link wow fadeInUp" data-wow-delay="0.2s"
                         href="https://maps.app.goo.gl/WgDsedtJBVa73nX77" target="_blank">
-                        <img alt="View Map" class="map-thumbnail" loading="lazy" src="image/map.jpg" />
+                        <img alt="View Map" class="map-thumbnail" loading="lazy" src="image/map.png" />
                     </a>
                 </div>
             </div>
